stack/base/llama-stack-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llama-stack-operator-system
  labels:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/name: llama-stack-operator
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/name: llama-stack-operator
    control-plane: controller-manager
  name: llama-stack-operator-controller-manager-metrics-service
  namespace: llama-stack-operator-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/name: llama-stack-operator
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/name: llama-stack-operator
    control-plane: controller-manager
  name: llama-stack-operator-controller-manager
  namespace: llama-stack-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller-manager
      app.kubernetes.io/name: llama-stack-operator
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/component: controller-manager
        app.kubernetes.io/name: llama-stack-operator
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: quay.io/llamastack/llama-stack-operator:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
      serviceAccountName: llama-stack-operator-controller-manager
      terminationGracePeriodSeconds: 10
