stack/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lsd-llama-milvus
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: lsd-llama-milvus-service
    weight: 100
  wildcardPolicy: None
